--- a/index.html
+++ b/index.html
@@ -104,17 +104,17 @@
 
       <div class="nav">
         <ul>
-          <a href="#">About Us</a>
-          <a href="#">What We Do</a>
-          <a href="#">FAQ</a>
+          <a href="#About-Us">About Us</a>
+          <a href="#What-We-Do">What We Do</a>
+          <a href="#FAQ">FAQ</a>
         </ul>
       </div>
 
       <div class="nav">
         <ul>
-          <a href="#">Career</a>
-          <a href="#">Blog</a>
-          <a href="#">Contact Us</a>
+          <a href="#Career">Career</a>
+          <a href="#Blog">Blog</a>
+          <a href="#Contact-Us">Contact Us</a>
         </ul>
       </div>
 
