--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="footer-flex">
 
       <div>
-        <ul class="contact">
+        <div class="contact">
           <li>
             <img src="./images/icon-location.svg" alt="icon-location">
             <span>Calea Plevnei nr.145, Bucuresti, Bucharest, Romania.</span>
@@ -99,23 +99,19 @@
             <img src="./images/icon-email.svg" alt="icon-email">
             <span>ltt9518@gmail.com</span>
           </li>
-        </ul>
+        </div>
       </div>
 
       <div class="nav">
-        <ul>
           <a href="#About-Us">About Us</a>
           <a href="#What-We-Do">What We Do</a>
           <a href="#FAQ">FAQ</a>
-        </ul>
       </div>
 
       <div class="nav">
-        <ul>
           <a href="#Career">Career</a>
           <a href="#Blog">Blog</a>
           <a href="#Contact-Us">Contact Us</a>
-        </ul>
       </div>
 
       <div class="icons">
