--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@600&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
+  <script type="module" src="./script.js"></script>
 
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
 
@@ -42,36 +43,47 @@
   </header>
   <main class="container">
     <section>
-      <img src="./images/illustration-grow-together.svg" alt="illustration-grow-together">
+      <img src="./images/illustration-grow-together.svg" class="query-img" alt="illustration-grow-together">
       <div class="card-typo">
-        <h2>Grow Together</h2>
-        <p>
-          Generate meaningful discussions with your audience and build a strong, loyal community.
-          Think of the insightful conversations you miss out on with a feedback form.
-        </p>
+
+        <div>
+          <h2>Grow Together</h2>
+          <p>
+            Generate meaningful discussions with your audience and build a strong, loyal community.
+            Think of the insightful conversations you miss out on with a feedback form.
+          </p>
+        </div>
+
       </div>
     </section>
 
     <section>
-      <img src="./images/illustration-flowing-conversation.svg" alt="illustration-flowing-conversation">
+      <img src="./images/illustration-flowing-conversation.svg" class="query-img"
+        alt="illustration-flowing-conversation">
       <div class="card-typo">
-        <h2>Flowing Conversations</h2>
-        <p>
-          You wouldn't paginate a conversation in real life, so why do it online? Our threads
-          have just-in-time loading for a more natural flow.
-        </p>
+        <div>
+          <h2>Flowing Conversations</h2>
+          <p>
+            You wouldn't paginate a conversation in real life, so why do it online? Our threads
+            have just-in-time loading for a more natural flow.
+          </p>
+        </div>
       </div>
     </section>
 
     <section>
-      <img src="./images/illustration-your-users.svg" alt="illustration-your-users">
+      <img src="./images/illustration-your-users.svg" class="query-img" alt="illustration-your-users">
       <div class="card-typo">
-        <h2>Your Users</h2>
+        <div>
 
-        <p>
-          It takes no time at all to integrate Huddle with your app's authentication solution.
-          This means, once signed in to your app, your users can start chatting immediately.
-        </p>
+          <h2>Your Users</h2>
+
+          <p>
+            It takes no time at all to integrate Huddle with your app's authentication solution.
+            This means, once signed in to your app, your users can start chatting immediately.
+          </p>
+
+        </div>
       </div>
     </section>
 
